完成第一版，可以用啦，抽起来！！！

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <link rel="stylesheet" href="./style.css"></link>
 </head>
 <body>
+<div class="zcm"><img src="./zcm.jpg"></div>
 <div id="game-board"></div>
+<div class="popup-box"></div>
 <script src="./script.js"></script>
 </body>
 </html>
