--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>旧岁龙腾去，新年蛇舞来</title>
 <link rel="stylesheet" href="./style.css"></link>
 </head>
